# LLM_CASH_demo

./: .gitignore  LICENCE  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  setup.py
src/llm_cash/synthetic_ridge/: ridge_exp.py  tasks.py
src/llm_cash/tabular/: generate_models.py
src/llm_cash/tabular/datasets/kaggle_churn/: metadata.json
src/llm_cash/tabular/prompts/: create_prompt.py
src/synthetic_ridge/: best_lambda.py  llm_exp.py  tasks.py
src/tabular/: generate_models.py  main.py
src/tabular/datasets/kaggle_abalone/: metadata.json  metadata.md
src/tabular/datasets/kaggle_allstate/: metadata.json  metadata.md  top_10_submissions.json
src/tabular/datasets/kaggle_attrition/: metadata.json  metadata.md
src/tabular/datasets/kaggle_blueberry/: metadata.json  metadata.md
src/tabular/datasets/kaggle_churn/: metadata.md
src/tabular/datasets/kaggle_cirrhosis/: metadata.json  metadata.md
src/tabular/datasets/kaggle_concrete_strength/: metadata.json  metadata.md
src/tabular/datasets/kaggle_covertype/: metadata.json  metadata.md
src/tabular/datasets/kaggle_crab_age/: metadata.md
src/tabular/datasets/kaggle_credit_fusion/: metadata.json  metadata.md
src/tabular/datasets/kaggle_failure/: metadata.md
src/tabular/datasets/kaggle_heat_flux_fi/: metadata.json  metadata.md
src/tabular/datasets/kaggle_horses/: metadata.json  metadata.md
src/tabular/datasets/kaggle_housing_california/: metadata.md
src/tabular/datasets/kaggle_influencers/: metadata.md
src/tabular/datasets/kaggle_insurance/: metadata.json  metadata.md
src/tabular/datasets/kaggle_loan_approval/: metadata.md  top_10_submissions.json
src/tabular/datasets/kaggle_media/: metadata.json  metadata.md
src/tabular/datasets/kaggle_mental_health/: metadata.json  metadata.md
src/tabular/datasets/kaggle_mercedes/: metadata.md
src/tabular/datasets/kaggle_molecules/: metadata.json  metadata.md
src/tabular/datasets/kaggle_unknown_a/: metadata.md
src/tabular/models/catboost/: hyperparameter_grid.json
src/tabular/models/lgbm/: hyperparameter_grid.json
src/tabular/models/skmlp/: hyperparameter_grid.json
src/tabular/models/xgboost/: hyperparameter_grid.json
src/tabular/prompts/: create_prompt.py  meta_informed_system_prompt.txt  utils.py  zero_shot_system_prompt.txt
(+18 files in other folders)
