[project]
name = "llm_cash"
authors = [
  {name = "Youssef Attia El Hili", email = "youssef.attiaeh@gmail.com"},
  {name = "Albert Thomas", email = "albertthomas88@gmail.com"},
  {name = "Abdelhakim Benechehab", email = "abdelhakim.benechehab@gmail.com"},
  {name = "Corentin Léger", email= ""}
  {name = "Malik Tiomoko", email=""}
  {name = "Corinne Ancourt", email=""}
  {name = "Balázs Kégl", email = "balazs.kegl@gmail.com"},
]
maintainers = [
  {name = "Youssef Attia El Hili", email = "youssef.attiaeh@gmail.com"},
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = ['ruff', 'pre-commit', 'black']

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.ruff]
line-length = 88