[project]
name = "llm_cash"
authors = [
  {name = "Youssef Attia El Hili", email = "youssef.attiaeh@gmail.com"},
  {name = "Albert Thomas", email = "albertthomas88@gmail.com"},
  {name = "Abdelhakim Benechehab", email = "abdelhakim.benechehab@gmail.com"},
  {name = "Corentin Léger", email= "corentin.lger@gmail.com"}
  {name = "Malik Tiomoko", email=""}
  {name = "Corinne Ancourt", email="corinne.ancourt_le_quellenec@minesparis.psl.eu"}
  {name = "Balázs Kégl", email = "balazs.kegl@gmail.com"},
]
maintainers = [
  {name = "Youssef Attia El Hili", email = "youssef.attiaeh@gmail.com"},
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]

[project.scripts]
ridge-exp = "llm_cash.synthetic_ridge.ridge_exp:main"
generate-models = "llm_cash.tabular.generate_models:main"

[project.optional-dependencies]
dev = ['ruff', 'pre-commit', 'black']

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.ruff]
line-length = 88
